INstall and setup cucumber

--- a/blog/app/views/articles/show.html.erb
+++ b/blog/app/views/articles/show.html.erb
@@ -31,5 +31,5 @@
 <p>
     <%= f.submit %>
 </p>
-<% end %>
+<% end %>git log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short master --all
 <%= link_to 'Article List', articles_path %>
