--- a/blog/app/views/articles/index.html.erb
+++ b/blog/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
         <th>Title</th>
         <th>Text</th>
     </tr>
-    <% @articles.each do |articles| %>
+    <% @articles.each do |article| %>
     <tr>
         <td><%= article.title %></td>
         <td><%= article.text %></td>
