--- a/blog/app/views/articles/show.html.erb
+++ b/blog/app/views/articles/show.html.erb
@@ -10,15 +10,7 @@
 
 <h2>Comments</h2>
 <% @article.comments.each do |comment| %>
-<p>
-    <strong>Comment:</strong>
-    <%= comment.commenter %>
-</p>
-<p>
-    <strong>Commenter:</strong>
-    <%= comment.body %>
-</p>
-<% end %>
+<%= render @article.comments %>
 <h2>Add a comment:</h2>
 <%= form_for([@article, @article.comments.build]) do |f| %>
 <p>
